vertical layout prevent overflow (music-jukebox-v2)

--- a/music-jukebox/v2/index.css
+++ b/music-jukebox/v2/index.css
@@ -16,7 +16,7 @@
 body {
 	margin: 0;
 	font-family: Open Sans;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 .title {
